# degen-wallet

./: .gitignore  README.md
degen-wallet-rs/: Cargo.toml
degen-wallet-rs/keys/: 05da7ea0-cc04-4ee3-9d4e-fe91caf7b6a1  073758a3-5b9b-4721-8af1-ef3493e13666  07e4b680-0e4d-4a9c-8c9c-b956b9c8618b  0d44621b-3087-4d45-bb25-f3a7951d763d  10ca7192-1139-4d32-8cfe-ff6b26a914c0  14c50411-f97e-4b02-ac15-6c7726e721d5  1d8efead-f004-4346-a437-a7a3891e4b07  34499bac-5ef4-495d-8398-5475c44f4b09  3d6ff37d-6620-4afe-a567-86067504d751  3ee1d4cb-a45e-471a-8a54-08fe80616d24  438a613e-d599-4eae-969e-8310fe6f1525  45995491-afd4-493c-a60b-da6cd1b9fd7c  465da3f7-ae3b-400d-a4ad-71ecb7b82f85  50b036d3-4b02-4263-a282-24d5960cc644  52aa9075-dbc6-4003-89e7-f5cd8b582a70  56a07d98-b931-4217-b19b-26cd16ce5a53  63b1852f-88c0-471a-8593-91d3e925512e  67bf457a-da89-4e4b-a137-6fb4ef9662a9  6da719cb-fb31-4172-b775-a44e516e0ddf  6e302de6-5d95-46ca-bbd9-43fb14c80aed  6e83de26-4aee-4024-bb98-92431082fd7f  726fab1a-f286-4dd3-952f-9b3d18b2880c  7422b29a-908a-4215-be7e-b521cdbbf85f  78b4ec43-4bc5-4283-876b-ea3117622702  7d67c3b1-6298-4793-9086-ce3be254241c  7d97d5d8-85f5-4124-986e-e13116b8a2a4  7f4e8c2a-9221-4b33-bc7c-840167387ead  80d29850-1bbf-4907-a71a-4dd2748252e9  b22be7e1-9ee9-4669-8b14-20e778f1c914  b267e04a-6ceb-4e05-9df5-3332f0017d99  c9ac1b5f-1458-4557-9510-c4a738743e40  cbc555f5-f43e-4ee8-8511-37372944d66a  d02a9a54-04a1-4b85-b643-f635ae8af802  dd017cd7-c3f0-4f1a-9449-518c34759bb6  dfbf9314-5950-4067-a8be-3081e03ee9e8  e8c74940-9aab-4a50-b027-7babf65e1b65  e9277b96-26dc-40ff-ada2-68cc5bc84c0e  ea9f5475-4540-4604-9d4f-a3d61eb41cc4  f04f8b91-c5e1-4acb-a682-34aa056bfde9  f7671d67-9cee-4e8c-b323-a5512ad14331  (+1 more)
degen-wallet-rs/src/: lib.rs  main.rs
degen-wallet-rs/src/eth/: domain.rs  external.rs  internal.rs  mod.rs
degen-wallet-rs/src/eth/wallet/: domain.rs  external.rs  internal.rs  mod.rs
degen-wallet-rs/src/eth/web3/: balance.rs  contract.rs  mod.rs  transaction.rs
degen-wallet-rs/src/sol/: mod.rs
degen-wallet-rs/src/sol/client/: balance.rs  mod.rs  program.rs  transaction.rs
degen-wallet-rs/src/sol/wallet/: external.rs
degen-wallet-rs/src/tui/: draw.rs  helpers.rs  mod.rs  state.rs
degen-wallet-rs/src/tui/old/: concurrent.rs  naive.rs
play/rs/eth-wallet/: Cargo.toml
play/rs/sol-wallet/: Cargo.toml  play-key.json
play/rs/tui-play/: Cargo.toml  Dockerfile
play/rs/tui-play/src/: lib.rs  (+14 more)
(+58 files in other folders)
