[package]
name = "tui_play"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version="0.15.0", features=["termion"] }
termion = "1.5.6"
rand = "0.8.4"
unicode-width = "0.1.8"
